--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
                 android:text="AC" />
 
             <Button
-                android:id="@+id/buttonopenBracket"
+                android:id="@+id/buttonOpenBracket"
                 android:layout_margin="1dp"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
@@ -51,7 +51,7 @@
                 android:text="(" />
 
             <Button
-                android:id="@+id/buttoncloseBracket"
+                android:id="@+id/buttonCloseBracket"
                 android:layout_margin="1dp"
                 android:layout_width="30pt"
                 android:layout_height="30pt"
